# secret-scan

./: .gitignore  .pre-commit-hooks.yaml  .secretscan_cache  BENCHMARK_RESULTS.md  FEATURE_STATUS.md  GEMINI.md  INSTRUCTIONS.md  LICENSE  README.md  RELEASE_NOTES.md  TaskTemplate.md  cache_engine.py  cli.py  demo.sh  detector.py  env.example  git_engine.py  ignore_engine.py  infinite_memory_chat.py  obfuscator.py  pyproject.toml  report.py  requirements.txt  run.sh  scan_repos.py  suggestions.py
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  ci-trigger
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml  security.yml
.github/workflows/: ci.yml  daily-secret-report.yml  pypi-publish.yml  (+4 more)
data/: regexp.list  rules.json  target_repos.json  test_data.json
src/: cli.py  detector.py  ignore_engine.py  obfuscator.py  sdk.py  suggestions.py  validators.py
tests/: acceptance.feature  test_acceptance.py  test_chunking.py  test_cli.py  test_demo.py  test_detector.py  test_git_engine.py  test_library_expansion.py  test_mmap_safety.py  test_new_rules.py  test_obfuscator.py  test_obfuscator_dynamic.py  test_overlaps.py  test_performance.py  test_pii.py  test_re2_set.py  test_report.py  test_rules.py  test_rules_duplicates.py  test_run_daily_scan.py  test_scoring.py  test_sdk_core.py
tools/: benchmark.py  curate_repos.py  deduplicate_rules.py  fix_rule_schema.py  generate_test_data.py  ingest_gitleaks_rules.py  migrate_entropy_factor.py  migrate_patterns.py  regex_lint.py  run_daily_scan.py  run_redoctor.py  run_regexploit.py  run_safe_regex.py  test_exrex.py
(+133 files in other folders)
