[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "secret-scan-detector"
version = "3.0.0"
description = "A local security tool to detect secrets and PII in LLM prompts, code, and logs."
readme = "README.md"
authors = [
  { name = "JMartynov" },
]
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "pyahocorasick",
    "google-re2",
    "regex",
    "faker",
    "pydantic<3.0",
    "pyyaml==6.0.3",
    "ruamel.yaml"
]

[project.urls]
Homepage = "https://github.com/JMartynov/secret-scan"
Repository = "https://github.com/JMartynov/secret-scan"

[project.scripts]
secret-scan = "src.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.sdist]
include = [
  "src",
  "data",
  "README.md",
  "LICENSE"
]
